gtimezone: Also lookup fallback ids in the cached timezones

We cache GTimeZone instances to avoid expensive construction when the
same id is requested again.

However, if no id is passed, we always construct a new instance for the
default/fallback timezone, even if later doesn't change.

With the recent introduction of some heavy calculations [1], repeated
instance construction in such cases has visible performance impact in
nautilus list view and other such GtkTreeView consumers.

Now that we get the resolved_identifier ealier, we can account for the
default/fallback timezone when looking up for existing instances in the
cache.

Fixes: https://gitlab.gnome.org/GNOME/glib/-/issues/2204

Based on idea proposed by Sebastian Keller <skeller@gnome.org>

[1] 25d950b61f92f25cc9ab20d683aa4d6969f93098